# frederick

./: .gitignore  Cargo.toml  README.md  flake.nix
scrap/: exampleres.json
src/: main.rs
src/api/: client.rs  methods.rs  mod.rs  structs.rs
src/constants/: mod.rs
vhs/: help.tape  usage.tape
