[package]
name = "frederick"
version = "0.1.0"
edition = "2021"

[dependencies]
audiotags = "0.5.0"
clap = { version = "4.5.16", features = ["derive"] }
dirs-next = "2.0.0"
reqwest = { version = "0.12.5", features = ["json"] }
urlencoding = "2.1.3"
serde = {version = "1.0", features = ["derive"]}
toml = "0.8.19"
owo-colors = "3"
